# Course-Project-Parallel-Programming

./: README.md
Embarrassingly Parallel Programming (Image Processing implemented with all six parallel programming languages)/src/cpu/: CMakeLists.txt  mpi_PartB.cpp  openmp_PartB.cpp  pthread_PartB.cpp  sequential_PartB.cpp  simd_PartB.cpp
Embarrassingly Parallel Programming (Image Processing implemented with all six parallel programming languages)/src/gpu/: CMakeLists.txt  cuda_PartB.cu  openacc_PartB.cpp
Embarrassingly Parallel Programming (Image Processing implemented with all six parallel programming languages)/src/scripts/: sbatch_PartA.sh  sbatch_PartB.sh
Parallel Programming with Reduction (Parallel Matrix Multiplication implemented with OpenMP)/profiling/: perf_locality.data  perf_mpi.txt  perf_naive.data  perf_openmp_16procs.data  perf_openmp_1procs.data  perf_openmp_2procs.data  perf_openmp_32procs.data  perf_openmp_4procs.data  perf_openmp_8procs.data  perf_simd.data
Parallel Programming with Reduction (Parallel Matrix Multiplication implemented with OpenMP)/src/: CMakeLists.txt  locality.cpp  mpi.cpp  openmp.cpp  sbatch.sh  simd.cpp
Parallel Programming with Reduction (Parallel Matrix Multiplication implemented with OpenMP)/src/gpu/: CMakeLists.txt  cuda.cu
Parallel Programming with Synchronization (Odd-Even Transposition Sort implemented with MPI)/profiling/: Bucket_sort_perf.txt  OddEven_sort_perf.txt  Quick_sort_perf.txt
Parallel Programming with Synchronization (Odd-Even Transposition Sort implemented with MPI)/src/: sbatch.sh
(+13 files in other folders)
